Implementacion Logica de Gemini